# Damascus_Laundry

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  damascus_laundry_dashboard  damascus_laundry_dashboard_open  latency_probe.py
.github/workflows/: ci.yml
.paul/: PROJECT.md  ROADMAP.md  STATE.md
.paul/phases/01-foundations/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/02-ingestion-pool-state/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.paul/phases/03-opportunity-detection/: 03-SUMMARY.md
.paul/phases/04-profit-cost-sizing/: 04-SUMMARY.md
.paul/phases/05-simulation-core-paper-ledger/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  (+1 more)
.paul/research/: multi-dex-math.md  onchain-arb-anchor-dataset.md  solana-mev-data-stack-research.md  solana-mev-landscape.md  solana-mev-paper-bot-research.md  solana-mev-paper-trading-research.md
crates/dl-app/: Cargo.toml
crates/dl-app/dl-calibration/: captures.jsonl
crates/dl-app/src/: config.rs  cycle_writer.rs  dry_run.rs  error.rs  feed_metrics.rs  gate_writer.rs  lib.rs  live.rs  live_metrics.rs  live_status.rs  main.rs  metrics.rs  metrics_prom.rs  opportunity.rs  recon.rs  reconcile.rs
crates/dl-app/tests/: chaos_kill_process.rs  chaos_kill_rpc.rs  cycle_writer_schema.rs  devnet_e2e.rs  devnet_smoke.rs  dl_ledger_path.rs  dry_run_e2e.rs  inspect_dry_run.rs  live_status_contract.rs  recon_cli.rs
crates/dl-app/tests/disabled/disable-pending-dam-43/: README.md
crates/dl-assert-program/: Cargo.toml
crates/dl-assert-program/src/: lib.rs
crates/dl-assert-sdk/: Cargo.toml
crates/dl-assert-sdk/src/: lib.rs
crates/dl-calibration/: Cargo.toml  README.md
crates/dl-calibration/src/: dam64.rs  lib.rs
crates/dl-core/: Cargo.toml
crates/dl-detect/: Cargo.toml
crates/dl-executor/: Cargo.toml
crates/dl-executor/src/: bundle.rs  error.rs  jito.rs  jupiter.rs  killswitch.rs  landing.rs  lib.rs  metrics.rs  signer_integration.rs  simulate.rs  tip.rs
crates/dl-executor/tests/: http_clients.rs
crates/dl-feed/: Cargo.toml
crates/dl-feed/src/: capture.rs  capturing.rs  dlmm.rs  error.rs  lib.rs  metrics_hook.rs  reconnect.rs  registry.rs  staleness.rs  whirlpool.rs  ws_feed.rs
crates/dl-feed/tests/: capture_roundtrip.rs  determinism.rs  dlmm_lb_pair_feed.rs  fixed_point_no_floats.rs  meteora_dlmm_capture_to_cycle.rs  reconnect_and_staleness.rs  whirlpool_subscription.rs  ws_feed_live.rs
crates/dl-feed/tests/fixtures/: sample_capture.bincode
crates/dl-ledger/: Cargo.toml
crates/dl-ledger/src/: entry.rs  error.rs  format.rs  hash.rs  lib.rs  reader.rs  summary.rs  writer.rs
crates/dl-ledger/tests/: int_only_no_fractional.rs  ledger_props.rs  ledger_roundtrip.rs
crates/dl-oracle/: Cargo.toml
crates/dl-oracle/src/: lib.rs
crates/dl-paper/: Cargo.toml
crates/dl-paper/src/: lib.rs
crates/dl-paper/tests/: roundtrip.rs  stats.rs
crates/dl-pipeline/: Cargo.toml
crates/dl-pipeline/src/: error.rs  lib.rs  recon.rs  reject.rs  validate.rs  warehouse.rs
crates/dl-pipeline/src/ingest/: cycle.rs  mod.rs  trade.rs
crates/dl-pipeline/src/query/: mod.rs
crates/dl-pipeline/tests/: fixtures.rs  floats.rs  recon.rs  schema_drift.rs  verify_idempotent.rs
crates/dl-pipeline/tests/fixtures/cycle/v1/: bad_legs.jsonl  happy.jsonl  missing_schema.jsonl
crates/dl-recon/: Cargo.toml
crates/dl-recon-overfit/: Cargo.toml
crates/dl-recon-overfit/src/: lib.rs
crates/dl-recon/assets/: anchors.v0.jsonl
crates/dl-recon/examples/: dump_capture.rs
crates/dl-recon/src/: bundles.rs  error.rs  fault.rs  fixture.rs  invariants.rs  lib.rs  onchain.rs  onchain_sweep.rs  pipeline.rs  reconcile.rs
crates/dl-recon/tests/: dam64_e2e_smoke.rs  dst_faults.rs  floats.rs  golden_replay.rs  onchain.rs  onchain_sweep.rs
crates/dl-recon/tests/fixtures/: golden_triangle.hash
crates/dl-signer/: Cargo.toml
crates/dl-signer/src/: cap.rs  error.rs  keystore.rs  lib.rs  livemode.rs  ratelimit.rs
crates/dl-signer/tests/: devnet_keystore.rs  no_floats.rs
crates/dl-sim/: Cargo.toml
crates/dl-state/: Cargo.toml
crates/dl-state/docs/: RESEARCH.md
crates/dl-state/src/: cycle.rs  error.rs  lib.rs  mint.rs  pool.rs  registry.rs  staleness.rs
crates/dl-state/src/decoder/: meteora_dlmm.rs  mod.rs  orca_whirlpool.rs  raydium_amm_v4.rs
crates/dl-state/tests/: amminfo_validation.rs  dam62_orca_whirlpool_3leg.rs  dam63_meteora_dlmm_3leg.rs  decoder_property.rs  fixed_point_no_floats.rs  orca_whirlpool_vault_routing.rs
crates/dl-stream/: Cargo.toml
crates/dl-stream/src/: detector.rs  latency.rs  lib.rs  pipeline.rs
crates/dl-stream/tests/: e2e_latency.rs
dashboard/: index.html  live.html
docs/: README.md  architecture.md  dl-app.env.example.md  known-limitations.md  runbook-map.md  runbook.md  testing.md  v1.0.md  v1.1.md  v2.0-operator-runbook.md
docs/chaos/: README.md
docs/contracts/: cycle.v1.md  cycle.v1.schema.json
docs/delegation/: DAM-46-reviewer-path-repair.md  DAM-67-cap-rs-baseline.rs  DAM-67-payload.json  dam-53-meteora-dlmm-lb-pair.md  dam-54-live-wiring-v2.patch  dam-54-live-wiring-v3.patch  dam-54-live-wiring.patch  dam-56-build-blockers.md  dam-64-reconciliation-consumer.md
docs/intel/: README.md  decision-log.md  glossary.md  timeline.md  vision-and-roadmap.md
docs/observability/: alerts.yml
docs/operations/: cap-raise-protocol.md
docs/recon/: dam39_v2_baseline.txt  recon-json-schema.md
docs/research/: latency-ladder.md
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-06-20/: graph.json  manifest.json
graphify-out/2026-06-21/: .graphify_labels.json  manifest.json
graphify-out/cache/: stat-index.json
plan/: dam-100-managers.md  dam-64-reconciliation-loop.md
scripts/: backtest_v2_baseline.py  recon_bundle.sh  reproduce_paper_pnl.sh  run_arbinexus_bridge.sh  run_full_pipeline.sh  seed_wallet.sh  start_paper_trader.sh  status.sh  stop_paper_trader.sh  verify_assert_program_deploy.sh
scripts/chaos/: kill_process_mid_bundle.sh  kill_rpc_mid_trade.sh
(+50 files in other folders)
