[workspace]
resolver = "2"
members = [
    "crates/dl-core",
    "crates/dl-feed",
    "crates/dl-state",
    "crates/dl-detect",
    "crates/dl-sim",
    "crates/dl-ledger",
    "crates/dl-app",
    "crates/dl-recon",
    "crates/dl-recon-overfit",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["damascus_laundry"]
repository = "https://github.com/jito-foundation/jito-solana"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"

# Internal crates
dl-core = { path = "crates/dl-core" }
dl-feed = { path = "crates/dl-feed" }
dl-state = { path = "crates/dl-state" }
dl-detect = { path = "crates/dl-detect" }
dl-sim = { path = "crates/dl-sim" }
dl-ledger = { path = "crates/dl-ledger" }
dl-recon = { path = "crates/dl-recon" }
dl-recon-overfit = { path = "crates/dl-recon-overfit" }

[profile.release]
lto = "thin"
codegen-units = 1
