[package]
name = "dl-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dl-app"
path = "src/main.rs"

[dependencies]
dl-core.workspace = true
dl-feed = { workspace = true, features = ["ws"] }
dl-state.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bs58 = "0.5"
