[package]
name = "dl-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dl-app"
path = "src/main.rs"

[dependencies]
dl-core.workspace = true
dl-feed = { workspace = true, features = ["ws"] }
dl-state.workspace = true
dl-detect.workspace = true
dl-sim.workspace = true
dl-ledger.workspace = true
dl-recon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bs58 = "0.5"
toml = "0.8"

[lib]
name = "dl_app"
path = "src/lib.rs"
