[package]
name = "dl-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dl_executor"
path = "src/lib.rs"

[dependencies]
dl-core.workspace = true
dl-signer.workspace = true
dl-state.workspace = true
dl-sim.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tracing.workspace = true
