[package]
name = "dl-feed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dl-core.workspace = true
tracing.workspace = true
thiserror = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
ws = [
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:tokio-stream",
  "dep:url",
  "dep:futures-util",
  "dep:bs58",
]

[dependencies.tokio]
optional = true
version = "1"
features = ["rt-multi-thread", "macros", "sync", "time"]

[dependencies.tokio-tungstenite]
optional = true
version = "0.24"
features = ["connect", "rustls-tls-webpki-roots"]

[dependencies.tokio-stream]
optional = true
version = "0.1"

[dependencies.url]
optional = true
version = "2"

[dependencies.futures-util]
optional = true
version = "0.3"

[dependencies.bs58]
optional = true
version = "0.5"

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "logging", "std", "tls12"]
