[package]
name = "dl-feed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dl-core.workspace = true
dl-state.workspace = true
tracing.workspace = true
thiserror = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["whirlpool"]
# `whirlpool` is the DAM-52 Orca Whirlpool subscription module.
# Enables `pub mod whirlpool;` in `src/lib.rs`, which depends on
# `dl-state` (already in `[dependencies]`). On by default so the
# `cargo test -p dl-feed` acceptance gate exercises the new
# module without a feature flag.
whirlpool = []
ws = [
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:tokio-stream",
  "dep:url",
  "dep:futures-util",
  "dep:bs58",
]

[dependencies.tokio]
optional = true
version = "1"
features = ["rt-multi-thread", "macros", "sync", "time"]

[dependencies.tokio-tungstenite]
optional = true
version = "0.24"
features = ["connect", "rustls-tls-webpki-roots"]

[dependencies.tokio-stream]
optional = true
version = "0.1"

[dependencies.url]
optional = true
version = "2"

[dependencies.futures-util]
optional = true
version = "0.3"

[dependencies.bs58]
optional = true
version = "0.5"

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "logging", "std", "tls12"]

[dev-dependencies]
dl-state.workspace = true
dl-stream.workspace = true
dl-detect.workspace = true
