[package]
name = "dl-feed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dl-core.workspace = true
dl-state.workspace = true
tracing.workspace = true
thiserror = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# `whirlpool` is the DAM-52 Orca Whirlpool subscription module.
# Opt-in (NOT in `default`) until `crates/dl-feed/src/whirlpool.rs`
# lands. The DAM-52 commit `3f75e71` declared the module via
# `pub mod whirlpool;` (feature-gated) but the file itself is
# still in flight; leaving it in `default` would break every
# `cargo build`/`cargo test` invocation that pulls dl-feed.
# Once DAM-52 lands the file, flip this back to
# `default = ["whirlpool"]` per the original DAM-52 plan.
whirlpool = []
ws = [
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:tokio-stream",
  "dep:url",
  "dep:futures-util",
  "dep:bs58",
]

[dependencies.tokio]
optional = true
version = "1"
features = ["rt-multi-thread", "macros", "sync", "time"]

[dependencies.tokio-tungstenite]
optional = true
version = "0.24"
features = ["connect", "rustls-tls-webpki-roots"]

[dependencies.tokio-stream]
optional = true
version = "0.1"

[dependencies.url]
optional = true
version = "2"

[dependencies.futures-util]
optional = true
version = "0.3"

[dependencies.bs58]
optional = true
version = "0.5"

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "logging", "std", "tls12"]

[dev-dependencies]
dl-state.workspace = true
dl-stream.workspace = true
dl-detect.workspace = true
