[package]
name = "dl-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dl-core.workspace = true
dl-sim.workspace = true
dl-state.workspace = true
tracing.workspace = true
serde.workspace = true
bincode = "1"

[dev-dependencies]
proptest.workspace = true
