[package]
name = "dl-paper"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dl_paper"
path = "src/lib.rs"

[dependencies]
dl-core.workspace = true
dl-sim.workspace = true
dl-state.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing.workspace = true
