[package]
name = "dl-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dl-core.workspace = true
tracing.workspace = true
thiserror = "1"
serde.workspace = true
bs58.workspace = true

[dev-dependencies]
dl-detect.workspace = true
dl-stream.workspace = true
proptest.workspace = true
