[package]
name = "dl-stream"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dl_stream"
path = "src/lib.rs"

[dependencies]
dl-core.workspace = true
dl-detect.workspace = true
dl-feed.workspace = true
dl-state.workspace = true
tracing.workspace = true
thiserror = "1"
